# Sub-category-fashion-prediction

./: .gitignore  [Data] Scrape_Website.ipynb  readme.md  requirements.txt
.github/workflow/: build.yml
airflow/: .env  Dockerfile  airflow.cfg  docker-compose.yml  requirements.txt
airflow/dags/: Batching_Data.py
airflow/model/: sub_category_model.json
app/model/: label_encoder.pkl
fastapi/: Dockerfile  pyproject.toml
fastapi/app/: main.py
streamlit/: Dockerfile  main.py  requirements.txt
